# forkd

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DESIGN-v0.4-PHASE3-SPIKE.md  DESIGN-v0.4-USER-API.md  DESIGN.md  Dockerfile  FIRECRACKER-UPSTREAM-PROPOSAL.md  LICENSE  NOTICE  README-zh.md  README.md  ROADMAP.md  registry.json
.github/workflows/: ci.yml  publish-pypi-mcp.yml  publish-pypi.yml  release.yml
bench/: CUBESANDBOX.md  README.md  bench-spawn-100.sh  compare-all.py  compare-vs-docker.sh  generate_charts.py
bench/live-fork-pause-window/: RESULTS-v0.4.md  bench-live-fork.csv  bench-live-fork.py
bench/pause-window/: README.md  RESULTS-v0.2.md  RESULTS-v0.3.md  agent.py  analyze.py  diff-real-sweep-ssd.csv  diff-real-sweep-tmpfs.csv  diff-sweep-ssd.csv  diff-sweep-tmpfs.csv  echo_server.py  make-multi-branch-chart.py  prewarm-sweep-ssd.csv  prewarm-sweep-tmpfs.csv  run.sh  sweep-diff-real.sh  sweep-diff.sh  sweep-prewarm.sh  test_analyze.py
bench/pause-window/results-v0.2/: trial-1.json  trial-2-tight.json  trial-3.json  trial-4.json  trial-5.json
crates/forkd-cli/: Cargo.toml
crates/forkd-cli/src/: doctor.rs  main.rs  sandbox.rs  wp_bench.rs
crates/forkd-controller/: Cargo.toml
crates/forkd-controller/src/: api.rs  audit.rs  auth.rs  http.rs  lib.rs  main.rs  state.rs
crates/forkd-controller/tests/: http_integration.rs
crates/forkd-uffd/: Cargo.toml
crates/forkd-uffd/src/: lib.rs  main.rs  raw.rs  wp_snapshot.rs
crates/forkd-vmm/: Cargo.toml
crates/forkd-vmm/src/: cgroup.rs  lib.rs  memfd.rs  paths.rs
docs/: API.md  HUB.md  INTEGRATION-BOXLITE.md  INTEGRATION-CUBESANDBOX.md  ROADMAP.md  RUNBOOK.md  SECURITY.md
docs/assets/: quickstart-fork-100.cast  wp-bench-demo-runner-zh.sh  wp-bench-demo-runner.sh  wp-bench-demo-zh.cast  wp-bench-demo.cast  wp-bench-demo.tape
docs/design/: diff-snapshots.md  userfaultfd.md
experiments/v0.4-kvm-uffd-wp-poc/: Cargo.toml  RESULTS.md
experiments/v0.4-kvm-uffd-wp-poc/src/: main.rs  uffd_raw.rs
experiments/v0.4-restore-poc/: Cargo.toml  RESULTS.md
experiments/v0.4-restore-poc/src/: main.rs
experiments/v0.4-thp-uffd-wp-poc/: Cargo.toml  RESULTS.md
experiments/v0.4-thp-uffd-wp-poc/src/: main.rs
experiments/v0.4-uffd-wp-poc/: Cargo.toml  README.md  RESULTS.md
experiments/v0.4-uffd-wp-poc/src/: main.rs
firecracker-patch/: README.md  v0.3-memfd-backend.patch
packaging/k8s/: README.md  forkd-controller.yaml
packaging/systemd/: forkd-controller.service
recipes/: README.md
recipes/autogen-branch/: README.md  demo.py
recipes/ci-parallel-pytest/: README.md  build.sh  demo.py
recipes/ci-parallel-pytest/test_project/: pyproject.toml
recipes/ci-parallel-pytest/test_project/tests/: test_arithmetic.py  test_numpy_ops.py  test_pandas_etl.py  test_sklearn_models.py  test_text_processing.py
recipes/coding-agent-fork/: README.md  demo.sh  setup-source.sh  summarize.py
recipes/coding-agent-fork/results-2026-05-19/: branch.json  minimal-init-py.txt  rewrite-init-py.txt  skip-init-py.txt  state-evidence.txt  summary.json  summary.md
recipes/coding-agent-fork/strategies/: minimal.sh  rewrite.sh  skip.sh
recipes/cube-langgraph/: README.md
recipes/langgraph-react/: DEMO.md  README.md  agent.py  build.sh  demo.sh  requirements.txt  summarize.py  tools.py
recipes/langgraph-react/results-2026-05-17/: branch.json  child-cost-transcript.jsonl  child-minimal-transcript.jsonl  child-thorough-transcript.jsonl  source-parent-transcript.jsonl  summary.json  summary.md
recipes/langgraph-react/results-2026-05-18/: branch.json  child-cost-transcript.jsonl  child-minimal-transcript.jsonl  child-thorough-transcript.jsonl  source-parent-transcript.jsonl  summary.json  summary.md
recipes/mcp-agent/: README.md  demo.py
recipes/playwright-browser/: README.md  build.sh
recipes/speculative-agent/: README.md  demo.py
rootfs-init/: forkd-agent.py  forkd-init.sh
scripts/: README.md  build-rootfs.sh  host-tap.sh  netns-setup.sh  setup-host.sh
sdk/python/: README.md  example.py  pyproject.toml
sdk/python/forkd/: __init__.py  sandbox.py
sdk/typescript/: package.json
