[workspace]
resolver = "2"
members = [
    "crates/forkd-vmm",
    "crates/forkd-controller",
    "crates/forkd-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/deeplethe/forkd"
authors = ["Deeplethe <info@deeplethe.com>", "forkd contributors"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rcgen = "0.13"
