[package]
name = "forkd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "forkd"
path = "src/main.rs"

[dependencies]
forkd-vmm = { path = "../forkd-vmm" }
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Snapshot Hub (`forkd pack` / `unpack` / `pull` / `images`).
sha2 = "0.10"
tar = "0.4"
zstd = "0.13"
toml = "0.8"
ureq = "2"

# `forkd doctor` uses statvfs(3) for snapshot-dir free-space check.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
