[package]
name = "forkd-uffd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "userfaultfd page-fault handler for forkd live branching (v0.3 phase 1, no-op event loop)"

[[bin]]
name = "forkd-uffd-handler"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
# Phase 1 only needs the recvmsg+SCM_RIGHTS handshake — pure libc.
# The `userfaultfd` crate (UFFDIO_* ioctl wrappers) is added when phase 3
# (real event loop) lands; pulling it in earlier risks version churn for
# no benefit.
