[package]
name = "v0_4-kvm-uffd-wp-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase 2 PoC for v0.4 live-fork — does UFFD_WP catch KVM guest writes through EPT? (Answers DESIGN-v0.4.md open question #1.)"
publish = false

[[bin]]
name = "v0_4-kvm-uffd-wp-poc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mman"] }
kvm-ioctls = "0.21"
kvm-bindings = "0.11"
