[package]
name = "v0_4-restore-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase 4 PoC for v0.4 — uses forkd_uffd::wp_snapshot::WpBranch end-to-end and validates that the captured snapshot is restorable into a fresh KVM VM"
publish = false

[[bin]]
name = "v0_4-restore-poc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
forkd-uffd = { path = "../../crates/forkd-uffd" }
libc = "0.2"
kvm-ioctls = "0.21"
kvm-bindings = "0.11"
