[package]
name = "v0_4-thp-uffd-wp-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase 3 PoC for v0.4 live-fork — measures UFFD_WP × THP interaction (open question #2 in DESIGN-v0.4.md)"
publish = false

[[bin]]
name = "v0_4-thp-uffd-wp-poc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mman"] }
