[package]
name = "v0_4-uffd-wp-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Phase 1 PoC for v0.4 live-fork — proves UFFDIO_WRITEPROTECT on memfd works as expected, and a handler can capture pre-write content before clearing WP"
publish = false

[[bin]]
name = "v0_4-uffd-wp-poc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs", "mman"] }
rand = "0.8"
